--- a/templates/emails/auth/confirm_email_address.html
+++ b/templates/emails/auth/confirm_email_address.html
@@ -1,4 +1,101 @@
-<p>Hello,</p>
-<p>Please <a href="{{ link }}">confirm your email address</a>.</p>
-<p>{{ link }}</p>
-<p>If you did not request this, please ignore this email.</p>
+{% extends "emails/base.html" %} {% block content %}
+<table
+    align="center"
+    role="presentation"
+    border="0"
+    cellpadding="0"
+    cellspacing="0"
+    width="600"
+    style="
+        border-collapse: collapse;
+        max-width: 600px;
+        width: 100%;
+        background-color: #fffffe;
+    "
+>
+    <tr style="vertical-align: middle" valign="middle">
+        <td align="center" style="padding: 30px" class="content">
+            <table
+                align="center"
+                role="presentation"
+                border="0"
+                cellpadding="0"
+                cellspacing="0"
+                width="600"
+                style="
+                    border-collapse: collapse;
+                    max-width: 600px;
+                    width: 100%;
+                    background-color: #fffffe;
+                "
+            >
+                <tr style="vertical-align: middle" valign="middle">
+                    <td class="content">
+                        <p
+                            style="
+                                color: #000000;
+                                font-size: 16px;
+                                mso-line-height-rule: exactly;
+                                line-height: 24px;
+                                font-family: Arial, sans-serif;
+                                margin-top: 0 !important;
+                            "
+                        >
+                            Please confirm your email address by clicking the
+                            link&nbsp;below.
+                        </p>
+                        <p
+                            style="
+                                color: #000000;
+                                font-size: 16px;
+                                mso-line-height-rule: exactly;
+                                line-height: 24px;
+                                font-family: Arial, sans-serif;
+                            "
+                        >
+                            We may need to send you critical information about
+                            our service and it is important that we have an
+                            accurate email&nbsp;address.
+                        </p>
+                        <p
+                            style="
+                                color: #000000;
+                                font-size: 16px;
+                                mso-line-height-rule: exactly;
+                                line-height: 24px;
+                                font-family: Arial, sans-serif;
+                            "
+                        >
+                            <a
+                                href="{{ link }}"
+                                style="
+                                    font-size: 16px;
+                                    mso-line-height-rule: exactly;
+                                    line-height: 24px;
+                                    font-family: Arial, sans-serif;
+                                    text-decoration: underline;
+                                    font-weight: bold;
+                                    color: #0000ff;
+                                "
+                                >Confirm email&nbsp;address</a
+                            >
+                        </p>
+                        <!--<p
+                            style="
+                                color: #000000;
+                                font-size: 16px;
+                                mso-line-height-rule: exactly;
+                                line-height: 24px;
+                                font-family: Arial, sans-serif;
+                                margin-bottom: 0 !important;
+                            "
+                        >
+                            &mdash; The&nbsp;Mailgunners
+                            </p>-->
+                    </td>
+                </tr>
+            </table>
+        </td>
+    </tr>
+</table>
+{% endblock %}
